Fixed spacing

--- a/edificios/edificio-a/styles.css
+++ b/edificios/edificio-a/styles.css
@@ -289,7 +289,7 @@ html {
     font-size: 1.7vh;
 }
 
-classroom-end-spacing {
+.classroom-end-spacing {
     margin-bottom: 3.5vh;
 }
 
